[package]
name = "kvs"
version = "0.1.0"
authors = ["ericdeansanchez <ericdeansanchez@berkeley.edu>"]
description = """
kvs is a key-value store written in rust.
"""
documentation = "https://github.com/ericdeansanchez/kvs"
homepage = "https://github.com/ericdeansanchez/kvs"
repository = "https://github.com/ericdeansanchez/kvs"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "kvs"
path = "src/kvs/lib.rs"

[dependencies]
# workaround see https://github.com/rust-lang/rls/issues/1454
bitflags = "=1.0.4"
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[[test]]
name = "unit"
path = "tests/tests.rs"